# perplexity-cli

./: .gitignore  LICENSE  README.md  perplexity.py  pyproject.toml
