[project]
name = "perplexity-cli"
version = "0.1.0"
description = "Command-line tool for calling the Perplexity API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "requests>=2.32.3",
]

[project.scripts]
perplexity = "perplexity:main"

[tool.uv]
package = true 
